Various null annotation updates - fix null validation error